--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,13 +7,9 @@ project(kraken2_server_client)
 # Set the C++ standard to be used
 set(CMAKE_CXX_STANDARD 17)
 
-include(cmake/dependencies.cmake)
-
-
-## Locate and verify version of protobuf
-#set(protobuf_MODULE_COMPATIBLE TRUE)
-
-find_package(Protobuf CONFIG REQUIRED)
+# Locate and verify version of protobuf
+set(protobuf_MODULE_COMPATIBLE TRUE)
+find_package(protobuf CONFIG REQUIRED)
 message(STATUS "Using protobuf ${Protobuf_VERSION}")
 
 ## Set a variable which points to a library installed on machine - Protobuf
@@ -22,7 +18,6 @@ set(_PROTOBUF_LIBPROTOBUF protobuf::libprotobuf)
 ## Set a variable which points to a library installed on machine - gRPC C++ Reflection
 set(_REFLECTION gRPC::grpc++_reflection)
 
-
 ## Find and set a var for the exectuable for protoc
 if(CMAKE_CROSSCOMPILING)
     find_program(_PROTOBUF_PROTOC protoc)
@@ -30,12 +25,9 @@ else()
     set(_PROTOBUF_PROTOC $<TARGET_FILE:protobuf::protoc>)
 endif()
 
-
 # Locate and verify version of gRPC
 find_package(gRPC CONFIG REQUIRED)
 message(STATUS "Using gRPC ${gRPC_VERSION}")
-
-find_package(Threads)
 
 # Set a variable which points to a library installed on machine - gRPC for C++
 set(_GRPC_GRPCPP gRPC::grpc++)
@@ -71,15 +63,8 @@ add_library(classify
 # Specify the headers (include) for this lib (target) and declare them PUBLIC so are findable by other libs/executables
 target_include_directories(classify PUBLIC kraken2/src/)
 
-#include_directories(${gRPC_INCLUDE_DIRS})
-#include_directories(${protobuf_INCLUDE_DIRS})
-#message(STATUS "gRPC include: ${gRPC_INCLUDE_DIRS}")
-#message(STATUS "protobuf include: ${protobuf_INCLUDE_DIRS}")
-
-
 # Execute the CMakeLists.txt in these folders
 add_subdirectory(protos)
 add_subdirectory(utils)
 add_subdirectory(server)
 add_subdirectory(client)
-
