Tidy up, stream2stream

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,15 +16,11 @@ stages:
     - release
 
 conda:
-    tags:
-        - large_ram
     extends: .deploy-conda
     variables:
         RECIPEPATH: "../conda"
     before_script:
         - export CONDA_PKG=${CI_PROJECT_NAME}
-        #- export CONDA_PKG_VERSION=${CI_COMMIT_TAG/v/}
-        - export CONDA_PKG_VERSION=v1.0.0
+        - export CONDA_PKG_VERSION=${CI_COMMIT_TAG/v/}
         - mkdir conda-build
         - cd conda-build
-    rules:
