Add a trailing slash to db_path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,12 +46,12 @@ endif()
 
 include(FindOpenMP)
 
-if(OPENMP_FOUND)
+if(OPENMP_FOUND AND NOT NO_OMP)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
-else(OPENMP_FOUND)
+else()
     message("ERROR: OpenMP could not be found.")
-endif(OPENMP_FOUND)
+endif()
 
 # Sources for file reading and messaging
 add_library(classify
