--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,8 +15,8 @@ variables:
 stages:
     - release
 
-conda:
-    extends: .deploy-conda
+
+.conda:
     variables:
         RECIPEPATH: "../conda"
     before_script:
@@ -24,3 +24,24 @@ conda:
         - export CONDA_PKG_VERSION=${CI_COMMIT_TAG/v/}
         - mkdir conda-build
         - cd conda-build
+
+
+conda-linux:
+    extends:
+        - .deploy-conda-linux
+        - .conda
+
+conda-linux-arm:
+    extends:
+        - .deploy-conda-linux-arm
+        - .conda
+
+#conda-mac:
+#    extends:
+#        - .deploy-conda-mac
+#        - .conda
+#
+#conda-mac-arm:
+#    extends:
+#        - .deploy-conda-mac-arm
+#        - .conda
