--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,7 +60,6 @@ make-grpc-arm64:
     tags:
         - arm64
 
-
 .conda:
     variables:
         RECIPEPATH: "../conda"
@@ -73,7 +72,7 @@ make-grpc-arm64:
         - cd conda-build
     rules:
         - if: '$CI_COMMIT_TAG =~ /^v[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+$/'
-        - if: '$CI_BRANCH_NAME =~ /package-build/'
+        - if: '$CI_COMMIT_BRANCH =~ /package-build/'
 
 
 conda-linux:
