--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,9 +73,9 @@ make-grpc-arm64:
         RECIPEPATH: "../conda"
     before_script:
         - export CONDA_PKG=${CI_PROJECT_NAME}
-        - VERSION=0.0.0
+        - VERSION="0.0.0"
         - if [[ -z "${CI_COMMIT_TAG}" ]]; then VERSION=${CI_COMMIT_TAG/v}; fi
-        - export CONDA_PKG_VERSION=$VERSION
+        - export CONDA_PKG_VERSION="${VERSION}"
         - mkdir conda-build
         - cd conda-build
     rules:
