--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,10 +13,26 @@ variables:
 
 
 stages:
+    - prerelease
     - build-deps
     - release
 
 
+deploy-checks:
+    stage: prerelease
+    variables:
+        PACKAGE_NAME: modbampy
+    script:
+        # TODO: store a version in code somewhere and check
+        - !reference [.check, changelog]
+    rules:
+        - if: '$CI_COMMIT_TAG =~ /^v[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+$/'
+
+
+# making gRPC can take an age. I (cjw) couldn't get cmake to work nicely
+# with gRPC library package from conda. So instead we'll build once in conda
+# and cache the result for future builds. Note if conda compiler ever changes
+# this build may need to be refreshed.
 .make-grpc:
     stage: build-deps
     script:
